fixing scroll-y, svg sprite bugs, change stack image on mobile

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -296,26 +296,6 @@
 body .homepage {
   scroll-behavior: smooth;
 }
-/* OVERLAY
-=========================== */
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0%;
-  z-index: 1000;
-}
-.first {
-  background: $text-color-primary;
-}
-.second {
-  background: $text-color-primary;
-  left: 33.3%;
-}
-.third {
-  background: $text-color-primary;
-  left: 66.6%;
-}
 
 .homepage {
   .btn-short {
@@ -558,10 +538,10 @@ body .homepage {
   .section-intro .common-SectionTitle {
       margin: 0 0 18px
   }
-  @media(min-width: 670px) {
-      .section-intro .common-SectionTitle {
-          margin:25px 0 18px
-      }
+  @media(max-width: 670px) {
+    .section-intro .header {
+      padding: 2rem 0 0 0;
+    }
   }
   .section-intro .common-IntroText {
       max-width: 800px;
@@ -654,7 +634,7 @@ body .homepage {
       align-items: flex-start;
       list-style-type:none ;
       font-weight: lighter;
-      align-items: center;
+      align-items: baseline;
       color: white;
     }
   }
@@ -813,13 +793,9 @@ body .homepage {
           background-position: 0 8px;
           padding-left: 2rem;
           display: flex;
-          align-items: flex-start;
           list-style-type:none ;
           font-weight: lighter;
-          align-items: center;
-          @media screen and (max-width: 720px) {
-            background-position: 0 2px;
-          }
+          align-items: baseline;
         }
       }
     }
